Fixed D-3.13 and various grammar errors of the whole draft

--- a/a06-decomp.tex
+++ b/a06-decomp.tex
@@ -60,7 +60,7 @@ $f = f_1 \dfrac{q}{\beta^1} + f _2\dfrac{q}{\beta^2} + \cdots + f_l \dfrac{q}{\b
 
 $ $
 
-We denote the decomposition of polynomial $f$ into base $\beta$ with level $l$ as follows:
+We denote the decomposition of the polynomial $f$ into the base $\beta$ with the level $l$ as follows:
 
 $ $
 
