--- a/a07-roots-of-unity.tex
+++ b/a07-roots-of-unity.tex
@@ -85,7 +85,7 @@ Given an $n$-th root of unity $\zeta = \omega^k$ for $k = \{0, 1, \cdots, n-1\}$
 \end{myproof}
 
 \begin{tcolorbox}[title={\textbf{\tboxtheorem{\ref*{subsec:roots-theorem}.5} The number of Primitive $\bm{n}$-th Roots of Unity}}]
-The number of primitive $n$-th roots of unity is $\phi(n)$ (i.e., the number of elements in $\{1, \cdots, n-1 \}$ that are co-prime to $n$).
+The number of primitive $n$-th roots of unity is $\phi(n)$ (i.e., the number of elements in $\{1, \cdots, n-1 \}$ that are coprime to $n$).
 \end{tcolorbox}
 
 \begin{proof}
