--- a/b04-glwe.tex
+++ b/b04-glwe.tex
@@ -178,7 +178,7 @@ $ $
 
 \item Scale up $M \longrightarrow \Delta M \text { } \in \mathcal{R}_{\langle n, q\rangle}$
 
-\item Compute the followings: 
+\item Compute the following: 
 
 $B = \mathit{PK}_1\cdot U + \Delta  M + E_1 \text{ } \in \mathcal{R}_{\langle n,q \rangle}$
 
